# FIAP-Tech-Challenge-Machine-Learning-Property

./: LICENSE  README.md  pyproject.toml
docs/: .$Diag_prediction_price_model.png.bkp
src/app_propieters_ml/api/: main.py  security.py
src/app_propieters_ml/api/static/css/: style.css
src/app_propieters_ml/api/static/js/: script.js
src/app_propieters_ml/api/templates/: index.html
src/app_propieters_ml/core/: database.py
src/app_propieters_ml/ml/: exploratory_analysis.ipynb  learning_curve.py  value_prediction_model.ipynb
src/app_propieters_ml/models/: property_model.py
src/app_propieters_ml/schemas/: prediction_model_schema.py  property_schema.py
src/app_propieters_ml/scraper/: scraping_zap_data_property.py
src/aws_ml/api/: main.py
src/aws_ml/models/: property_model.py
src/aws_ml/schemas/: property_schema.py
src/aws_ml/scraper/: scraping_zap_data_property.py
