[project]
name = "aws-ml"
version = "0.1.0"
description = ""
authors = [
    {name = "KevinOFL",email = "kevinsilvaofl@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "selenium (>=4.35.0,<5.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "selenium-stealth (>=1.0.6,<2.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
